; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_list_each_note.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_list_each_note.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"%s %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, %struct.object_id*, i8*, i8*)* @list_each_note to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @list_each_note(%struct.object_id* %0, %struct.object_id* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.object_id* %0, %struct.object_id** %5, align 8
  store %struct.object_id* %1, %struct.object_id** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.object_id*, %struct.object_id** %6, align 8
  %10 = call i8* @oid_to_hex(%struct.object_id* %9)
  %11 = load %struct.object_id*, %struct.object_id** %5, align 8
  %12 = call i8* @oid_to_hex(%struct.object_id* %11)
  %13 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %10, i8* %12)
  ret i32 0
}

declare dso_local i32 @printf(i8*, i8*, i8*) #1

declare dso_local i8* @oid_to_hex(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
